# rustmatica

./: .gitignore  Cargo.toml  DataExtractor.java  GetBlockInfo.java  Makefile  README.md  block_list.json  blocks.txt  build.rs  data.txt  dprint.json  entityData.json  generate_sources.bash  generate_sources.sh  make_blocks.py  make_lists.py  run_data_extractor.bash  run_data_extractor.sh
.github/workflows/: build.yml  data_extraction.yml  run_tests.yml  test_all.yml  tests.yml
examples/: layer_view.rs  make_preview_img.rs  metadata.rs  planet.rs  stress_test.rs
source-parser/: .gitignore  README.md  package.json  tsconfig.json
source-parser/src/: main.ts  member-visitor.ts  props-visitor.ts
src/: error.rs  lib.rs  litematic.rs  region.rs  schema.rs  tile_entities.rs  util.rs
src/block_state/: de.rs  list.rs  macros.rs  mod.rs  ser.rs  traits.rs  types.rs
src/entity/: list.rs  macros.rs  mod.rs  traits.rs
src/tests/: all_features.rs  block_state.rs  core.rs  entity.rs  mod.rs  without_lists.rs
test_files/: axolotl.litematic  donut.litematic  donut_modified.litematic
test_files/tmc_archive/: 0-tick-less_72k_Stone_by_redberd.litematic  1.18.litematic  1.19_sugarcane_lag_friendly.litematic  108K_Concrete_factory.litematic  12xBrewers.litematic  144k_tall_flower_farm.litematic  16x_hopperspeed_shulker_unloader.litematic  192K_concrete_factory_V5.litematic  21k_CobbleGenerator.litematic  30bps_1.13.litematic  30bps_Conveyor_5x5_9gt-R_compacter.litematic  30bps_mob_conveyor_hampter_alugia.litematic  30gt_b36_tnt_duper_basalt_1d2e.litematic  30gt_b36_tnt_duper_cobble_1d3e.litematic  345k_basalt.litematic  3x3_MBE_Bore_SpecMethodzz.litematic  528_MBE_Bore_SpecMethodzz.litematic  6gt_birch_Fire_x4_Tnt_version.litematic  6gt_birch_Fire_x4_Wither_Version.litematic  800k_Bartering_Farm_V2_By_Auraa.litematic  801k_basalt.litematic  8_bit_adder_v2.litematic  ABss2_8_chest_per_slice.litematic  ActiveHopperlocking64FurnaceArray.litematic  Cheizer-MangroveTreeFarm-v4.litematic  Cheizer-RootedDirtFarm-20Core-v1.litematic  ChunkLoader_NetherSide.litematic  Cropfarm_v3.litematic  DaveRooneys_16.2k_Shroomlight_Farm.litematic  FEPCactusFarm.litematic  Feng_Bl_1049K_hr_cobblestone_farm.litematic  Full_Speed_8gt_Cart_Yeeting_Unloader_2.0.litematic  Fully_Automatic_Nether_Tree_Farm_-_Crimson_Variant.litematic  Fully_Automatic_Nether_Tree_Farm_-_Warped_Variant.litematic  Fully_hopper_locked_chest_hall_V2.litematic  Haydens_V2_Mangrove_Tree_Farm_Based_on_Gandalfs.litematic  IDMS_AB_tilable_chest_hall_sliceBulk_storage_tilable.litematic  Ice_121piglin_bartering_system_with_bulk.litematic  Mechanists_DigSort_v6.litematic  Rooted_Dirt_Farm.litematic  (+22 more)
test_files/tmc_catalogue/: 1-dim_swamp_slimes_mushroomless.litematic  3_layer_looting_swamp_slime.litematic  4gt_azalea_94.5k.litematic  C5_Llamaggro_V1.1.litematic  Chronos_Raid_Farm_v4.litematic  IanXO4 Ghast Farm - Nether.litematic  IanXO4 Ghast Farm - Overworld.litematic  Ianxofour_1.18_Slime_Lichen.litematic  Magma_and_Froglight_Farm_N.litematic  Magma_and_Froglight_Farm_OW.litematic  Simple_Enderman_XP_Farm.litematic  Simplest_Shulker_Farm_V3b3.litematic  Simplest_Shulker_Farm_V3b3_with_collection.litematic  Snow_Golem_Portal_Looting_Swamp_Slime_Farm.litematic  Zardors_Overworld_Gold_Farm.litematic  Zardors_Overworld_Gold_Farm_Layer.litematic  camyblank_drowned_farm.litematic  swamp_slimes_cheap_7k.litematic
