[package]
name = "rustmatica"
version = "0.3.0"
authors = ["RubixDev"]
categories = ["encoding", "wasm"]
edition = "2021"
keywords = ["minecraft", "serde", "litematic", "litematica", "nbt"]
license = "GPL-3.0-only"
repository = "https://github.com/RubixDev/rustmatica"
description = "A Rust library for reading, editing, and writing Minecraft litematic files"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["chrono"]

chrono = ["dep:chrono"]

[dependencies]
fastnbt = "2.5.0"
flate2 = "1.0.30"
mcdata = { version = "0.2.0", features = ["serde"] }
serde = { version = "1.0.201", features = ["derive"] }
thiserror = "1.0.60"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
chrono = { version = "0.4.38", optional = true }

[target.'cfg(target_family = "wasm")'.dependencies]
chrono = { version = "0.4.38", features = ["wasmbind"], optional = true }
js-sys = "0.3.69" # for current time without chrono feature

[dev-dependencies]
mcdata = { version = "0.2.0", features = ["serde", "latest", "block-states"] }

[package.metadata.docs.rs]
all-features = true
