[workspace.dependencies]
mcdata = { version = "0.3.0", features = ["serde"] }

[package]
name = "rustmatica"
version = "0.5.0"
authors = ["RubixDev"]
categories = ["encoding", "wasm"]
edition = "2021"
exclude = [".github", "dprint.json", "test_files"]
keywords = ["minecraft", "serde", "litematic", "litematica", "nbt"]
license = "GPL-3.0-only"
repository = "https://github.com/RubixDev/rustmatica"
description = "A Rust library for reading, editing, and writing Minecraft litematic files"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
#! ## Features
default = ["chrono", "image"]

## Use [`chrono`] types for timestamps.
chrono = ["dep:chrono"]

## Use the [`image`] crate for preview images.
image = ["dep:image"]

## Enable this when building the docs
docs = ["dep:document-features", "dep:rustc_version"]

_mcdata-all = ["mcdata/entities", "mcdata/block-entities", "mcdata/mc-all"]

[dependencies]
document-features = { version = "0.2.8", optional = true }
fastnbt = "2.5.0"
flate2 = "1.0.30"
image = { version = "0.25.1", optional = true }
mcdata.workspace = true
serde = { version = "1.0.201", features = ["derive"] }
thiserror = "1.0.60"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
chrono = { version = "0.4.38", optional = true }

[target.'cfg(target_family = "wasm")'.dependencies]
chrono = { version = "0.4.38", features = ["wasmbind"], optional = true }
js-sys = "0.3.69" # for current time without chrono feature

[dev-dependencies]
bounded-integer = "0.5.7"
mcdata = { workspace = true, features = ["latest", "block-states"] }
viuer = "0.7.1"

[build-dependencies]
rustc_version = { version = "0.4.0", optional = true }

[package.metadata.docs.rs]
all-features = true
